# OpenGLDrawer

./: CMakeLists.txt  Main.qml  README.md
Shaders/v110/: FragmentShader.frag  VertexShader.vert
Shaders/v330/: FragmentShader.frag  VertexShader.vert
Shaders/v440/: FragmentShader.frag  VertexShader.vert
include/BaseEngine/: BaseOpenGL.h  BaseOpenGLWindow.h
include/Components/: RectangleComponent.h  RectangleItem.h  RectangleRenderer.h
include/Windows/: RectangleWindow.h  TriangleWindow.h
src/: OpenGLWindow.cpp  main.cpp
src/BaseEngine/: BaseOpenGL.cpp  BaseOpenGLWindow.cpp
src/Components/: RectangleComponent.cpp  RectangleItem.cpp  RectangleRenderer.cpp
src/Windows/: RectangleWindow.cpp  TriangleWindow.cpp
